Progress as of Saturday the fifth

--- a/index.html
+++ b/index.html
@@ -9,10 +9,22 @@
   </head>
 
 	<body>
-        <div>Hello, World!</div>
-        <div><h1>This is my Main Heading</h1>
-        Checking to see if br tags work to drop the text down a bit.
-        </div>
+      <div id="box1"></div>
+        
+
+      <div id="box2"><h1>Fishkeeping 101</h1></div>
+
+      <div id="box3"><p>Fishkeeping has been one of my favorite hobbies since high school and a way of coping with anxiety. There is something calming about watching a little ecosystem come to life on your kitchen counter - especially when things are going right. To ensure smooth sailing, it is always best to do some basic research on anything you want to change or add to your aquarium. Having a basic understanding of filtration, light, plants, and the specific needs of the fish species you plan to keep is the first step to building something beautiful! These are the basics I wish I knew before starting the hobby (and doing so would have saved me a lot of money!):</p></div>
+
+      <div id="container">
+              <div>
+                    <h2>Filtration Basics</h2>
+                      <p>There are two types of filtration going on in most successful aquariums: <i>biological</i> and <b>mechanical</b>. Biological filtration happens when beneficial bacteria in the aquarium break down fish waste and other toxins in the water. These bacteria colonize in the gravel, on the surface of decorations, and most abundantly inside of filter media. Sponge filters provide a great surface for these bacteria to grow as the surface area is so large. Biological filtration happens naturally in every healthy stream, river, lake ect.! Plants can also serve as biological filters absorbing the nutrients created from this breakdown process.</p>
+                      <p>Mechanical filtration happens when you have an actual filter in your tank that removes larger particles. This takes all the large chunks of food, waste, or rotting plant bits out of your display - keeping your water looking nice and pristine!</p>
+                   </div>
+              <div>Item 2</div>
+              <div>Item 3</div>
+       </div>
 
        <div><ul>
             <li>Here we have an unordered list</li>
